# ott

./: .dockerignore  .gitignore  LICENSE  README.md  hooks.sh  kind-cluster.yaml  skaffold.env  skaffold.yaml
connectors/: Dockerfile  fluvio_profile.toml  likes-config.yaml  posts-config.yaml
crates/: Cargo.toml
crates/ott-db-migration/: Cargo.toml  README.md
crates/ott-db-migration/migrations/: 001_enble_extensions.sql  002_create_partionened_table.sql  003_configure_pgpartman.sql  004_setup_cron.sql  005_grant_access_to_vec_table.sql
crates/ott-db-migration/src/: main.rs
crates/ott-embed/: Cargo.toml  README.md
crates/ott-embed/src/: lib.rs  main.rs  pg_client.rs
crates/ott-filter/: Cargo.toml
crates/ott-filter/src/: main.rs
crates/ott-ingest/: Cargo.toml  build.rs
crates/ott-ingest/schemas/: like.json
crates/ott-ingest/src/: at_types.rs  lib.rs  main.rs  tei_client.rs
crates/ott-types/: Cargo.toml  README.md
crates/ott-types/src/: lib.rs
crates/ott-xrpc/: Cargo.toml
crates/ott-xrpc/src/: bsky.rs  key.rs  lib.rs  main.rs  webcontext.rs
docker/postgres/: Dockerfile  migration.Dockerfile  pg_init.sql
docker/rust-service/: Dockerfile
helm/ott/: Chart.yaml  values.yaml
helm/ott/templates/: app_auth.yaml  cloudflared_tunnel.yaml  deployments.yaml  pg_cluster.yaml  pg_migration.yaml  services.yaml  tei_service.yaml
helm/system-setup/: Chart.yaml  values.yaml
smart-modules/assign-record-key/: Cargo.toml  README.md  SmartModule.toml  test_transformation.yaml
smart-modules/assign-record-key/src/: lib.rs
smart-modules/construct-post-uri/: Cargo.toml  README.md  SmartModule.toml  example.json
smart-modules/construct-post-uri/src/: lib.rs
smart-modules/contruct-post-uri/: SmartModule.toml
smart-modules/contruct-post-uri/src/: lib.rs
