[package]
name = "ott-db-migration"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
