[package]
name = "ott-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
fluvio = "0.50.1"
moka = { version = "0.12.11", features = ["sync"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.26.1"
