[package]
name = "ott-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
fluvio = "0.50.1"
moka = { version = "0.12.11", features = ["sync"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.47.1"
tokio-postgres = "0.7.14"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
typify = "0.4.3"

[build-dependencies]
anyhow = "1.0.100"
atproto-identity = "0.13.0"
atproto-lexicon = "0.13.0"
reqwest = "0.12.23"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
prettyplease = "0.2"
schemars = "1.0.4"
syn = "2.0.106"
typify = "0.4.3"
