[package]
name = "ott-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
fluvio = "0.50.1"
moka = { version = "0.12.11", features = ["sync"] }
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "tls-native-tls" ]  }
tokio = { version = "1.47.1", features = ["full", "sync"] }
tokio-postgres = "0.7.14"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.26.1"
