[package]
name = "ott-xrpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atproto-xrpcs-helloworld"
path = "src/main.rs"
test = false
bench = false
doc = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
atproto-identity = "0.13.0"
atproto-xrpcs = "0.13.0"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive", "env"] }
http = "1.3.1"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
