[package]
name = "ott-xrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
axum-macros = "0.5.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
elliptic-curve = "0.13.8"
http = "1.3.1"
jacquard = { version = "*", features = ["api_bluesky", "derive"] }
jacquard-api = { version = "*" }
jacquard-axum = "0.5.2"
jacquard-common = "0.5.4"
jacquard-identity = { version = "*", features = ["dns"] }
multibase = "0.9.2"
rand = "0.9.2"
reqwest = "0.12.23"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
futures = "0.3.31"
rstest = "0.26.1"
